fix: correct overlapping sections bug

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -92,7 +92,7 @@ nav
   border-radius: $primary-border-radius
 
 .about--section
-  height: 100vh
+  min-height: 100vh
   padding-top: 100px
   h1, h2, h3, h4, h5
     color: #ffe4db !important
